<resources>

    <!-- Error HandLer -->
    <string name="Invalid_User">Invalid password or Email</string>
    <string name="Invalid_Code">Invalid Code, please check again</string>

    <!-- OnBoarding Activity -->
    <string name="app_name">Handypro</string>
    <string name="onboarding_message1">We provide professional service at a friendly price</string>
    <string name="onboarding_icon1">onboarding_icon!</string>
    <string name="onboarding_button_text">Skip</string>
    <string name="Arrow_onBoarding">Arrow_onBoarding</string>
    <string name="indicator">navigation indicator</string>
    <string name="tab_text_Onboarding">Onboarding tab</string>
    <string name="Onboarding_Button">Continue</string>

    <!-- Login Activity -->
    <string name="Login_text_Intro">Log In</string>
    <string name="Login_Email_input">Enter your Email</string>
    <string name="Login_Password_input">Enter your Password</string>
    <string name="Login_Button_String">Log In</string>
    <string name="Forgot_Password"><u>Forgot your Password?</u></string>
    <string name="LogIn_Option">Or Log In with</string>
    <string name="Facebook_textButton">Facebook</string>
    <string name="Google_textButton">Google</string>
    <string name="LogIn_Text">Don\'t have an account?</string>
    <string name="SignUp_Button"><u>Sign Up</u></string>

    <!-- Sign Up Activity -->
    <string name="SignUp_text_Intro">Create your Account</string>
    <string name="SignUp_FName_Text">First Name</string>
    <string name="SignUp_LName_Text">Last Name</string>
    <string name="SignUp_Email_Text">Email</string>
    <string name="SignUp_Number_Text">Phone Number</string>
    <string name="SignUp_Password_Text">Password</string>
    <string name="SignUp_ConfirmPassword_Text">Confirm your Password</string>
    <string name="SignUp_Terms_and_Conditions">I have read and agree to the Terms and Conditions</string>
    <string name="SignUp_Btn">Create Account</string>
    <string name="SignUp_Text">Already have an account?</string>
    <string name="LogIn_Button"><u>Log In</u></string>

    <!-- Verify OTP Activity -->
    <string name="VerifyOTP_text_Intro">Verify Code</string>"
    <string name="VerifyOTP_text_Instructions_number">Please enter the 6-digit code we just sent to your phone number </string>
    <string name="VerifyOTP_text_Instructions_email">Please enter the 6-digit code we just sent to your email</string>
    <string name="VerifyOTP_fill">OTP fill</string>
    <string name="VerifyOTP_Btn">Verify</string>

    <!-- Home Fragment -->
    <string name="Home_Intro">What service do you need?</string>
    <string name="Home_SearchBar_Text">Search for service…</string>
    <string name="Home_SearchIcon">Search Icon</string>
    <string name="Home_NotificationIcon">Notification Icon</string>
    <string name="Home_SearchBar_Close">Close Icon</string>
    <string name="Home_Carousel_Image">Carousel Image</string>
    <string name="Home_Carousel_Promo">20% off</string>
    <string name="Home_Carousel_Service">Plumbing Service</string>
    <string name="Home_Carousel_Button">View Details</string>
    <string name="Home_Service_Initial">Services</string>
    <string name="Home_ViewAll"><u>View All</u></string>
    <string name="Home_Category_Icon">Service Icon</string>
    <string name="Home_Category_Text">Housekeeping</string>
    <string name="Home_Recc_Initial">Recommended</string>
    <string name="Home_Recc_Image">Worker Image</string>
    <string name="Home_Recc_Service">House Cleaning</string>
    <string name="Home_Recc_Name">John Doe</string>"
    <string name="Home_Recc_Rating">⭐ 4.8</string>
    <string name="Home_Recc_Review">150 Reviews</string>"
    <string name="Home_Recc_Price">₱ 700.00 - ₱ 1,000.00</string>
    <string name="Home_Recc_Bookmark">Bookmark</string>
    <string name="Home_Recc_Discount">20% off</string>
    <string name="Home_Recc_Icon_Rating">⭐ %1$.1f</string>
    <string name="Home_Recc_text_Review">%1$d Reviews</string>
    <string name="Home_Recc_text_Price">₱ %1$.2f</string>
    <string name="Home_Nav_HomeIC">Home Icon</string>
    <string name="Home_Nav_BookmarkIC">Bookmark Icon</string>
    <string name="Home_Nav_MessageIC">Message Icon</string>
    <string name="Home_Nav_ProfileIC">Profile Icon</string>
    <string name="Home_Nav_Explore">Explore Icon</string>

    <!-- Explore Fragment -->
    <string name="Explore_into">Explore</string>
    <string name="Explore_filter_text">Filter</string>
    <string name="Explore_closeIcon">Close</string>
    <string name="Explore_bottom_sheet_text">Sort by</string>
    <string name="Explore_radioButton_General">General</string>
    <string name="Explore_radioButton_category">Category</string>
    <string name="Explore_radioButton_ratingLtH">Ratings: Low to High</string>
    <string name="Explore_radioButton_ratingHtL">Ratings: High to Low</string>
    <string name="Explore_radioButton_reviews">Reviews</string>
    <string name="Explore_radioButton_priceLtH">Price: Low to High</string>
    <string name="Explore_radioButton_priceHtL">Price: High to Low</string>
    <string name="Explore_bottom_sheet_apply">Apply</string>
    
    <!-- Chat Fragment -->
    <string name="Chat_input">Send a message…</string>
    <string name="Chat_emoji_icon">Emoji Icon</string>
    <string name="Chat_image_icon">Image Icon</string>
    <string name="Chat_send_icon">Send Icon</string>
</resources>