<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp" >

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/Explore_bottom_sheet_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bottom_sheet_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Explore_closeIcon"
        android:src="@drawable/close_icon"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <RadioButton
            android:id="@+id/radioButton_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explore_radioButton_General"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explore_radioButton_category"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton_ratingLtH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explore_radioButton_ratingLtH"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton_ratingHtL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explore_radioButton_ratingHtL"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explore_radioButton_reviews"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton_priceLtH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explore_radioButton_priceLtH"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton_priceHtL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Explore_radioButton_priceHtL"
            android:textSize="15sp" />

    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingTop="12dp"
            android:paddingRight="32dp"
            android:paddingBottom="12dp"
            android:text="@string/Explore_bottom_sheet_apply"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>