<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="110dp"
    android:layout_gravity="center"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    android:elevation="2dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_marginEnd="10dp"
            android:clipToOutline="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/worker_profile_layout"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/worker_housekeeping"
                android:contentDescription="@string/Home_Recc_Image"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/worker_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/Home_Recc_Service"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/worker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/Home_Recc_Name"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_regular"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/worker_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/Home_Recc_Rating"
                    android:textSize="12sp"
                    android:fontFamily="@font/montserrat_regular"/>

                <TextView
                    android:id="@+id/worker_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Home_Recc_Review"
                    android:textSize="12sp"
                    android:fontFamily="@font/montserrat_regular"/>
            </LinearLayout>

            <TextView
                android:id="@+id/worker_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home_Recc_Price"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_regular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/worker_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/Home_Recc_Bookmark"
                android:src="@drawable/bookmark" />

            <TextView
                android:id="@+id/worker_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/discount_layout"
                android:text="@string/Home_Recc_Discount"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>