<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="155dp"
    android:layout_marginTop="100dp"
    android:layout_marginStart="30dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:cardElevation="4dp"
    app:cardCornerRadius="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/offer_ad_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/offers_plumbing"
            android:contentDescription="@string/Home_Carousel_Image"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha=".5"/>
        
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/offer_ad_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/Home_Carousel_Promo"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/offer_ad_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/Home_Carousel_Service"
                android:textColor="@color/white"
                android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/offer_ad_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/Home_Carousel_Button"
                android:textColor="@color/black"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>