<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border_format_layout"
        android:padding="15dp"
        android:importantForAccessibility="yes">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/searchview_icon"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/Home_SearchIcon"/>

        <EditText
            android:id="@+id/searchbar_text"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/Home_SearchBar_Text"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textSize="14sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/Home_SearchBar_Close"
            app:srcCompat="@drawable/close_icon"
            tools:visibility="invisible" />
    </LinearLayout>
</merge>